Add missing HTML structure to components and fix indentation in index.html

--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="en">
 <h1 class="university">POLITECHNIKA ŚWIĘTOKRZYSKA</h1>
 <h2 class="faculty">Wydział Elektrotechniki, Automatyki i Informatyki</h2>
 <hr>
@@ -24,3 +26,4 @@
         </td>
     </tr>
 </table>
+</html>
