--- a/components/screenshot-container.html
+++ b/components/screenshot-container.html
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
 <div class="screenshot-upload">
     <div class="no-print">Click then paste (CTRL + V)</div>
     <img src="" alt="Screenshot">
 </div>
+</html>
